# bitmex-supervisor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  example.py  requirements.txt  setup.cfg  setup.py  supervisor.py
core/: api.py  interface.py  ws_thread.py
core/auth/: APIKeyAuth.py  APIKeyAuthWithExpires.py  AccessTokenAuth.py  __init__.py
core/utils/: constants.py  orders.py
supervisor/: __init__.py  _supervisor.py
supervisor/core/: api.py  interface.py  orders.py  settings.py  trailing_orders.py  ws_thread.py
supervisor/core/auth/: APIKeyAuth.py  APIKeyAuthWithExpires.py  __init__.py
supervisor/core/utils/: errors.py  log.py  math.py  orders.py
tests/integration/: test_supervisor.py  test_trailing_stop.py
tests/unit/: test_interface.py  test_order.py  test_supervisor.py  test_trailing.py
