# https://gist.github.com/forkcs/76de0ea947a2fd27b131f9fa49bc1968

[metadata]
name = {name}
version = {version}
author = Fedor Soldatkin
author-email = fsoldatkin@yandex.ru
home-page = https://github.com/forkcs/{name}
description = {description}
long-description = file: README.md
long-description-content-type: text/markdown
license = MIT License
license-file = LICENSE
platform = any
keywords = {keywords}
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
packages = {name}
test_suite = tests
setup_requires =
    setuptools
	# setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes

[bdist_wheel]
universal = true


[sdist]
formats = zip, gztar
